--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bio: Philip May</title>
+    <title>Bio: Philip</title>
 </head>
 <body>
-    <h1>Philip Bio</h1>
+    <h1>Philip May</h1>
+    <img width="200" src="slack pic.jpg" alt="My bio picture"></img>
+    <hr>
+    <p>Data-driven, seasoned financial analyst with 12+ years progressive experience driving business, industry and macro insights; developing and presenting logical value-add recommendations to executive partners; identifying and building proprietary analytical and business intelligence tools; and collaborating cross-functionally. Penchant for ad hoc projects and serving others. Persistent, resourceful and self-motivated to own projects end-to-end. Continual learner, enhancing data science skill set.</p>
+    <br>
+    <h3>Some Helpful Links About Me:</h3>
+    <ul>
+        <li><a href="https://www.linkedin.com/in/philip-may/" target="_blank">Philip May Linked-In</a></li>
+        <li><a href="https://github.com/pmayA440" target="_blank">Philip May GitHub</a></li>
+    </ul>
+    <hr>
+    <table>
+        <tr>
+            <th>Favorite Movies</th>
+            <th>Favorite Songs</th>
+            <th>Favorite Activities</th>
+        </tr>
+        <tr>
+            <td>Big Short</td>
+            <td>Sunday Bloody Sunday</td>
+            <td>Time with family</td>
+        </tr>
+    </table>
 </body>
 </html>
