--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Philip May</h1>
-    <img width="200" src="slack pic.jpg" alt="My bio picture"></img>
+    <img width="200" src="https://media.licdn.com/dms/image/C4E03AQGGIUjaE8ARSQ/profile-displayphoto-shrink_200_200/0?e=1554940800&v=beta&t=dX2TAYyJ-nFtCnP7n4dMrmH7rcHPRG-OSt0Po7ts6MQ" alt="My bio picture"></img>
     <hr>
     <p>Data-driven, seasoned financial analyst with 12+ years progressive experience driving business, industry and macro insights; developing and presenting logical value-add recommendations to executive partners; identifying and building proprietary analytical and business intelligence tools; and collaborating cross-functionally. Penchant for ad hoc projects and serving others. Persistent, resourceful and self-motivated to own projects end-to-end. Continual learner, enhancing data science skill set.</p>
     <br>
@@ -23,6 +23,11 @@
             <th>Favorite Movies</th>
             <th>Favorite Songs</th>
             <th>Favorite Activities</th>
+        </tr>
+        <tr>
+            <td>Big Short</td>
+            <td>Sunday Bloody Sunday</td>
+            <td>Time with family</td>
         </tr>
         <tr>
             <td>Big Short</td>
