--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Philip May</h1>
     <img width="200" src="https://media.licdn.com/dms/image/C4E03AQGGIUjaE8ARSQ/profile-displayphoto-shrink_200_200/0?e=1554940800&v=beta&t=dX2TAYyJ-nFtCnP7n4dMrmH7rcHPRG-OSt0Po7ts6MQ" alt="My bio picture"></img>
     <hr>
+    <h3>Summary:</h3>
     <p>Data-driven, seasoned financial analyst with 12+ years progressive experience driving business, industry and macro insights; developing and presenting logical value-add recommendations to executive partners; identifying and building proprietary analytical and business intelligence tools; and collaborating cross-functionally. Penchant for ad hoc projects and serving others. Persistent, resourceful and self-motivated to own projects end-to-end. Continual learner, enhancing data science skill set.</p>
     <br>
     <h3>Some Helpful Links About Me:</h3>
@@ -18,7 +19,7 @@
         <li><a href="https://github.com/pmayA440" target="_blank">Philip May GitHub</a></li>
     </ul>
     <hr>
-    <table>
+    <table border = 1;>
         <tr>
             <th>Favorite Movies</th>
             <th>Favorite Songs</th>
@@ -26,13 +27,13 @@
         </tr>
         <tr>
             <td>Big Short</td>
-            <td>Sunday Bloody Sunday</td>
+            <td>Sunday Bloody Sunday (U2)</td>
             <td>Time with family</td>
         </tr>
         <tr>
-            <td>Big Short</td>
-            <td>Sunday Bloody Sunday</td>
-            <td>Time with family</td>
+            <td>Family Man</td>
+            <td>What is hip? (Tower of Power)</td>
+            <td>Investing</td>
         </tr>
     </table>
 </body>
