--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <ul>
         <li><a href="https://www.linkedin.com/in/philip-may/" target="_blank">Philip May Linked-In</a></li>
         <li><a href="https://github.com/pmayA440" target="_blank">Philip May GitHub</a></li>
+        <li><a href="page1.html" target="_blank">Pyber Project</a></li>
     </ul>
     <hr>
     <table border = 1;>
